use assertj for assertions (#3213) (#3230)
* use assertj for assertions (#3213)
* remove fail for assert exception
* remove assertTrue
* use import static on collections
* use map import static
* replace assertEquals with assertThat
* disable logging
* fix codacy
* removed hamcrest assertions
* restored jpa tests