@@ -1,9 +1,6 @@
 package org.activiti.editor.language.xml;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -45,13 +42,13 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
 
   private void validateModel(BpmnModel model) {
     FlowElement flowElement = model.getMainProcess().getFlowElement("start1");
-    assertNotNull(flowElement);
-    assertTrue(flowElement instanceof StartEvent);
-    assertEquals("start1", flowElement.getId());
+    assertThat(flowElement).isNotNull();
+    assertThat(flowElement).isInstanceOf(StartEvent.class);
+    assertThat(flowElement.getId()).isEqualTo("start1");
 
     // verify the main process data objects
     List<ValuedDataObject> dataObjects = model.getProcess(null).getDataObjects();
-    assertEquals(7, dataObjects.size());
+    assertThat(dataObjects).hasSize(7);
 
     Map<String, ValuedDataObject> objectMap = new HashMap<String, ValuedDataObject>();
     for (ValuedDataObject valueObj : dataObjects) {
@@ -59,77 +56,77 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
     }
 
     ValuedDataObject dataObj = objectMap.get("dObj1");
-    assertEquals("dObj1", dataObj.getId());
-    assertEquals("StringTest", dataObj.getName());
-    assertEquals("xsd:string", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof String);
-    assertEquals("Testing1&2&3", dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj1");
+    assertThat(dataObj.getName()).isEqualTo("StringTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:string");
+    assertThat(dataObj.getValue()).isInstanceOf(String.class);
+    assertThat(dataObj.getValue()).isEqualTo("Testing1&2&3");
 
     dataObj = objectMap.get("dObj2");
-    assertEquals("dObj2", dataObj.getId());
-    assertEquals("BooleanTest", dataObj.getName());
-    assertEquals("xsd:boolean", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Boolean);
-    assertEquals(new Boolean(true), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj2");
+    assertThat(dataObj.getName()).isEqualTo("BooleanTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:boolean");
+    assertThat(dataObj.getValue()).isInstanceOf(Boolean.class);
+    assertThat(dataObj.getValue()).isEqualTo(Boolean.TRUE);
 
     dataObj = objectMap.get("dObj3");
-    assertEquals("dObj3", dataObj.getId());
-    assertEquals("DateTest", dataObj.getName());
-    assertEquals("xsd:datetime", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Date);
+    assertThat(dataObj.getId()).isEqualTo("dObj3");
+    assertThat(dataObj.getName()).isEqualTo("DateTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:datetime");
+    assertThat(dataObj.getValue()).isInstanceOf(Date.class);
     SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
-    assertEquals("2013-09-16T11:23:00", sdf.format(dataObj.getValue()));
+    assertThat(sdf.format(dataObj.getValue())).isEqualTo("2013-09-16T11:23:00");
 
     dataObj = objectMap.get("dObj4");
-    assertEquals("dObj4", dataObj.getId());
-    assertEquals("DoubleTest", dataObj.getName());
-    assertEquals("xsd:double", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Double);
-    assertEquals(new Double(123456789), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj4");
+    assertThat(dataObj.getName()).isEqualTo("DoubleTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:double");
+    assertThat(dataObj.getValue()).isInstanceOf(Double.class);
+    assertThat(dataObj.getValue()).isEqualTo(new Double(123456789));
 
     dataObj = objectMap.get("dObj5");
-    assertEquals("dObj5", dataObj.getId());
-    assertEquals("IntegerTest", dataObj.getName());
-    assertEquals("xsd:int", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Integer);
-    assertEquals(new Integer(123), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj5");
+    assertThat(dataObj.getName()).isEqualTo("IntegerTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:int");
+    assertThat(dataObj.getValue()).isInstanceOf(Integer.class);
+    assertThat(dataObj.getValue()).isEqualTo(Integer.valueOf(123));
 
     dataObj = objectMap.get("dObj6");
-    assertEquals("dObj6", dataObj.getId());
-    assertEquals("LongTest", dataObj.getName());
-    assertEquals("xsd:long", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Long);
-    assertEquals(new Long(-123456), dataObj.getValue());
-    assertEquals(1, dataObj.getExtensionElements().size());
+    assertThat(dataObj.getId()).isEqualTo("dObj6");
+    assertThat(dataObj.getName()).isEqualTo("LongTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:long");
+    assertThat(dataObj.getValue()).isInstanceOf(Long.class);
+    assertThat(dataObj.getValue()).isEqualTo(new Long(-123456));
+    assertThat(dataObj.getExtensionElements()).hasSize(1);
     List<ExtensionElement> testValues = dataObj.getExtensionElements().get("testvalue");
-    assertNotNull(testValues);
-    assertEquals(1, testValues.size());
-    assertEquals("testvalue", testValues.get(0).getName());
-    assertEquals("test", testValues.get(0).getElementText());
+    assertThat(testValues).isNotNull();
+    assertThat(testValues).hasSize(1);
+    assertThat(testValues.get(0).getName()).isEqualTo("testvalue");
+    assertThat(testValues.get(0).getElementText()).isEqualTo("test");
 
     dataObj = objectMap.get("NoData");
-    assertEquals("NoData", dataObj.getId());
-    assertEquals("NoData", dataObj.getName());
-    assertEquals("xsd:datetime", dataObj.getItemSubjectRef().getStructureRef());
-    assertNull(dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("NoData");
+    assertThat(dataObj.getName()).isEqualTo("NoData");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:datetime");
+    assertThat(dataObj.getValue()).isNull();
 
     flowElement = model.getMainProcess().getFlowElement("userTask1");
-    assertNotNull(flowElement);
-    assertTrue(flowElement instanceof UserTask);
-    assertEquals("userTask1", flowElement.getId());
+    assertThat(flowElement).isNotNull();
+    assertThat(flowElement).isInstanceOf(UserTask.class);
+    assertThat(flowElement.getId()).isEqualTo("userTask1");
     UserTask userTask = (UserTask) flowElement;
-    assertEquals("kermit", userTask.getAssignee());
+    assertThat(userTask.getAssignee()).isEqualTo("kermit");
 
     flowElement = model.getMainProcess().getFlowElement("subprocess1");
-    assertNotNull(flowElement);
-    assertTrue(flowElement instanceof SubProcess);
-    assertEquals("subprocess1", flowElement.getId());
+    assertThat(flowElement).isNotNull();
+    assertThat(flowElement).isInstanceOf(SubProcess.class);
+    assertThat(flowElement.getId()).isEqualTo("subprocess1");
     SubProcess subProcess = (SubProcess) flowElement;
-    assertEquals(11, subProcess.getFlowElements().size());
+    assertThat(subProcess.getFlowElements()).hasSize(11);
 
     // verify the sub process data objects
     dataObjects = subProcess.getDataObjects();
-    assertEquals(6, dataObjects.size());
+    assertThat(dataObjects).hasSize(6);
 
     objectMap = new HashMap<String, ValuedDataObject>();
     for (ValuedDataObject valueObj : dataObjects) {
@@ -137,45 +134,45 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
     }
 
     dataObj = objectMap.get("dObj7");
-    assertEquals("dObj7", dataObj.getId());
-    assertEquals("StringSubTest", dataObj.getName());
-    assertEquals("xsd:string", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof String);
-    assertEquals("Testing456", dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj7");
+    assertThat(dataObj.getName()).isEqualTo("StringSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:string");
+    assertThat(dataObj.getValue()).isInstanceOf(String.class);
+    assertThat(dataObj.getValue()).isEqualTo("Testing456");
 
     dataObj = objectMap.get("dObj8");
-    assertEquals("dObj8", dataObj.getId());
-    assertEquals("BooleanSubTest", dataObj.getName());
-    assertEquals("xsd:boolean", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Boolean);
-    assertEquals(new Boolean(false), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj8");
+    assertThat(dataObj.getName()).isEqualTo("BooleanSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:boolean");
+    assertThat(dataObj.getValue()).isInstanceOf(Boolean.class);
+    assertThat(dataObj.getValue()).isEqualTo(Boolean.FALSE);
 
     dataObj = objectMap.get("dObj9");
-    assertEquals("dObj9", dataObj.getId());
-    assertEquals("DateSubTest", dataObj.getName());
-    assertEquals("xsd:datetime", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Date);
-    assertEquals("2013-11-11T22:00:00", sdf.format(dataObj.getValue()));
+    assertThat(dataObj.getId()).isEqualTo("dObj9");
+    assertThat(dataObj.getName()).isEqualTo("DateSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:datetime");
+    assertThat(dataObj.getValue()).isInstanceOf(Date.class);
+    assertThat(sdf.format(dataObj.getValue())).isEqualTo("2013-11-11T22:00:00");
 
     dataObj = objectMap.get("dObj10");
-    assertEquals("dObj10", dataObj.getId());
-    assertEquals("DoubleSubTest", dataObj.getName());
-    assertEquals("xsd:double", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Double);
-    assertEquals(new Double(678912345), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj10");
+    assertThat(dataObj.getName()).isEqualTo("DoubleSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:double");
+    assertThat(dataObj.getValue()).isInstanceOf(Double.class);
+    assertThat(dataObj.getValue()).isEqualTo(new Double(678912345));
 
     dataObj = objectMap.get("dObj11");
-    assertEquals("dObj11", dataObj.getId());
-    assertEquals("IntegerSubTest", dataObj.getName());
-    assertEquals("xsd:int", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Integer);
-    assertEquals(new Integer(45), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj11");
+    assertThat(dataObj.getName()).isEqualTo("IntegerSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:int");
+    assertThat(dataObj.getValue()).isInstanceOf(Integer.class);
+    assertThat(dataObj.getValue()).isEqualTo(Integer.valueOf(45));
 
     dataObj = objectMap.get("dObj12");
-    assertEquals("dObj12", dataObj.getId());
-    assertEquals("LongSubTest", dataObj.getName());
-    assertEquals("xsd:long", dataObj.getItemSubjectRef().getStructureRef());
-    assertTrue(dataObj.getValue() instanceof Long);
-    assertEquals(new Long(456123), dataObj.getValue());
+    assertThat(dataObj.getId()).isEqualTo("dObj12");
+    assertThat(dataObj.getName()).isEqualTo("LongSubTest");
+    assertThat(dataObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:long");
+    assertThat(dataObj.getValue()).isInstanceOf(Long.class);
+    assertThat(dataObj.getValue()).isEqualTo(new Long(456123));
   }
 }
